final version, submitted to the ZPA

--- a/example.bib
+++ b/example.bib
@@ -59,6 +59,16 @@
       url={https://arxiv.org/abs/2210.09364}, 
 }
 
+@misc{tomei2025cmsupgradeshighluminositylhc,
+      title={CMS Upgrades for the High-Luminosity LHC Era}, 
+      author={Thiago R. F. P. Tomei},
+      year={2025},
+      eprint={2501.03412},
+      archivePrefix={arXiv},
+      primaryClass={hep-ex},
+      url={https://arxiv.org/abs/2501.03412}, 
+}
+
 @article{CMS,
    title={Development of the CMS detector for the CERN LHC Run~3},
    volume={19},
