--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -2,13 +2,13 @@
 
 This thesis has introduced PIP, specifically designed for discrete features in particle physics applications. Applied to the DeepJet flavour tagging algorithm used in CMS, this work demonstrates how to develop a robustness against vulnerabilities in state-of-the-art machine learning models that were previously disregarded.
 
-The key innovation of PIP comes from its probabilistic approach to discrete perturbations. Unlike continuous attack methods that generate non-physical fractional values when being applied to integer features, PIP uses gradient information to probabilistically determine whether to increment or decrement discrete features by integer units. This ensures all perturbations remain physically meaningful while effectively probing model robustness. A tunable sharpness parameter controls the attack's aggressiveness, allowing researchers to balance effectiveness with stealth considerations.
+The key innovation of PIP comes from its probabilistic approach to discrete perturbations without continuous relaxation. Unlike continuous attack methods that generate non-physical fractional values when being applied to integer features, PIP uses gradient information to probabilistically determine whether to increment or decrement discrete features by integer units. This ensures all perturbations remain physically meaningful while effectively probing model robustness. A tunable sharpness parameter controls the attack's aggressiveness, allowing researchers to balance effectiveness with stealth considerations.
 
 The investigation of PIP-PGD attacks reveals synergistic effects exceeding the impact of either method alone. Attacking both, continuous and discrete, features simultaneously exploits complementary vulnerabilities, leading to more severe performance degradation than expected from individual attack impacts.
 
 Adversarial training experiments show that models trained against only one attack type exhibit limited transferability to other attack types, indicating attack-specific overfitting. However, adversarial training with PIP-PGD attacks provides balanced robustness across all tested scenarios while maintaining nominal performance within 1-2\% of baseline levels. This combined training approach offers the most comprehensive protection against both continuous and discrete adversarial perturbations.
 
-Beyond the specific application to DeepJet, this work contributes to the broader field of adversarial machine learning by suggesting a general framework for attacking discrete features that can be adapted to other scientific domains. The successful combination of continuous and discrete attacks demonstrates the importance of considering multiple perturbation modalities in robustness evaluation, particularly relevant for scientific applications involving mixed data types.
+Beyond the specific application to DeepJet, this work contributes to the broader field of adversarial machine learning by suggesting a general and computational cheap framework for attacking discrete features on top of continuous values that can be adapted to other scientific domains. The successful combination of continuous and discrete attacks demonstrates the importance of considering multiple perturbation modalities in robustness evaluation, particularly relevant for scientific applications involving mixed data types.
 
 \newpage
 
