--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -8,7 +8,7 @@ Jet-tagging algorithms such as DeepJet \cite{Bols_2020} process hundreds of feat
 
 This thesis addresses this challenge by introducing Probabilistic Integer Perturbation (PIP), an adversarial attack tailored to discrete features. PIP uses gradient information in a one-step heuristic to assign feature-specific probabilities for discrete changes, ensuring that all perturbations remain physically meaningful. This method is furthermore combined with the Projected Gradient Descent (PGD) attack \cite{madry2019deeplearningmodelsresistant}, targeting both continuous and discrete domains simultaneously and providing a broader evaluation of model vulnerabilities.
 
-Empirically, this study uses the DeepJet architecture \cite{Bols_2020} trained on approximately ten million simulated jets across all major flavour categories. In additional to the susceptibility for perturbation of continuous values, the results show that DeepJet is vulnerable to degradation through discrete perturbations too. The combined Probabilistic Integer-Perturbed Projected Gradient Descent (PIP-PGD) attack amplifies this effect. Adversarial training with PIP-PGD attacks is presented as a solution, offering robustness in the respective regimes.
+Empirically, this study uses the DeepJet architecture \cite{Bols_2020} trained on approximately ten million simulated jets across all major flavour categories. In addition to the susceptibility for perturbation of continuous values, the results show that DeepJet is vulnerable to degradation through discrete perturbations too. The combined Probabilistic Integer-Perturbed Projected Gradient Descent (PIP-PGD) attack amplifies this effect. Adversarial training with PIP-PGD attacks is presented as a solution, offering robustness in the respective regimes.
 
 Although discrete perturbations do not directly correspond to realistic detector effects, they serve as a diagnostic tool to reveal model dependencies on discretised inputs. Insights that remain hidden in continuous-only studies are revealed through the use of these perturbations. The work presented here contributes to the development of a more complete understanding of adversarial robustness in High Energy Physics (HEP) machine learning and outlines approaches for developing models that are both accurate and resilient in demanding scientific applications.
 
