--- a/thesis/machine_learning.tex
+++ b/thesis/machine_learning.tex
@@ -1,25 +1,25 @@
 \chapter{Machine Learning in High Energy Physics}
 
-Machine-learning (ML) methods play an increasingly central role in high-energy-physics analyses, from low-level detector reconstruction to high-level statistical inference \cite{PhysRevD.112.016004}. Their usefulness derives from the ability to learn complex, non-linear correlations in high-dimensional feature spaces that are difficult to express in analytic form. Historically, particle physicists pioneered the use of multivariate algorithms in the 1990s and 2000s for analysis tasks, relying on techniques like artificial neural networks and boosted decision trees (BDTs) \cite{Guest_2018}. The emergence of deep learning around 2012 enabled training of very large neural networks that outperformed previous state of the art models \cite{Guest_2018}. This caused a rapid expansion of HEP applications spanning across particle/event identification, reconstruction and even real-time data filtering \cite{albertsson2019machinelearninghighenergy}.
+Machine-learning (ML) methods play an increasingly central role in HEP analyses, from low-level detector reconstruction to high-level statistical inference \cite{PhysRevD.112.016004}. Their usefulness derives from the ability to learn complex, non-linear correlations in high-dimensional feature spaces that are difficult to express in analytic form. Historically, particle physicists pioneered the use of multivariate algorithms in the 1990s and 2000s for analysis tasks, relying on techniques like artificial neural networks and boosted decision trees (BDTs) \cite{Guest_2018}. The emergence of deep learning around 2012 enabled training of very large neural networks that outperformed previous state of the art models \cite{Guest_2018}. This caused a rapid expansion of HEP applications spanning across particle/event identification, reconstruction and even real-time data filtering \cite{albertsson2019machinelearninghighenergy}.
 
 
 \section{Machine Learning using Deep Neural Networks}
 
-Neural networks (NNs) are computational models designed to approximate a mapping from input variables \textbf{x} to a desired output \textbf{y}. They consist of interconnected nodes organized into layers, inspired by the structure of the human brain \cite{hammad2024artificialneuralnetworkdeep}. The input layer contains one node for each dimension of the training data. The output layer corresponds to the desired output dimensions, reflecting the number of distinct mappings the network needs to learn. Between input and output layer, a varying number of hidden layers number enhance the network’s ability to adapt and model complex patterns. Each node is associated with a weight, a bias, and an activation function, enabling non-linear mappings for intricate problems \cite{Goodfellow-et-al-2016}. During training, a process called backpropagation adjusts these weights by computing gradients across the network from input to output, guided by a specified loss function.
+Neural networks (NNs) are computational models designed to approximate a mapping from input variables \textbf{x} to a desired output \textbf{y}. They consist of interconnected nodes organized into layers, inspired by the structure of the human brain \cite{hammad2024artificialneuralnetworkdeep}. The input layer contains one node for each dimension of the training data. The output layer corresponds to the desired output dimensions, reflecting the number of distinct mappings the network needs to learn. Between input and output layer, a varying number of hidden layers number enhance the network’s ability to adapt and model complex patterns. Each node is associated with a weight, a bias, and an activation function, enabling non-linear mappings for intricate problems. During training, a process called backpropagation adjusts these weights by computing gradients across the network from input to output, guided by a specified loss function \cite{Goodfellow-et-al-2016}.
 
-When the number of hidden layers increases significantly, the network is typically referred to as a deep neural network (DNN), capable of modelling highly complex relationships in data. DNNs can approximate arbitrarily complicated functions, making them well-suited for tasks such as particle identification, energy regression, pile-up mitigation, and anomaly detection \cite{Khalaf:2025grv}. In practice, DNN-based algorithms now permeate the workflow of collider and astroparticle experiments, achieving better performance than many traditional methods. For example, convolutional neural networks (CNNs) that treat detector data as images have outperformed physics-motivated features in classifying jet substructure \cite{de_Oliveira_2016}. Likewise, recurrent neural networks (RNNs) or long short-term memory (LSTM) networks can naturally handle sequential data, as demonstrated by their use in jet flavour taggers to process tracks and vertex sequences \cite{Bols_2020}.
+When the number of hidden layers increases significantly, the network is typically referred to as a deep neural network (DNN), capable of modelling highly complex relationships in data. DNNs can approximate arbitrarily complicated functions, making them well-suited for tasks such as particle identification, energy regression, pile-up mitigation, and anomaly detection \cite{Khalaf:2025grv}. In practice, DNN-based algorithms now permeate the workflow of collider and astroparticle experiments, achieving better performance than many traditional methods. For example, convolutional neural networks (CNNs) that treat detector data as images have outperformed physics-motivated features in classifying jet substructure \cite{de_Oliveira_2016}. Likewise, recurrent neural networks (RNNs \cite{Goodfellow-et-al-2016}) or long short-term memory (LSTM \cite{Goodfellow-et-al-2016}) networks can naturally handle sequential data, as demonstrated by their use in jet-flavour taggers to process tracks and vertex sequences \cite{Bols_2020}.
 
-A typical supervised-learning workflow in HEP involves several common steps. First, labelled datasets are prepared using Monte Carlo (MC) simulations, which provide ground-truth information for particle types, kinematics, event categories, etc. Supervised training on MC truth is widespread because real collisions cannot be labelled event-by-event with the desired signal/background distinctions \cite{PhysRevD.112.016004}. However, ML models can overfit to simulation-specific artifacts, potentially limiting their ability to generalize to real data \cite{PhysRevD.112.016004}. To mitigate this, physicists carefully design training procedures and validation tests. The dataset is typically split into training and testing portions; models are trained with a suitable loss function (for example, cross-entropy for classification or mean squared error for regression) which reflects the physics goals. Sometimes custom objectives are used – for instance, optimizing directly for a statistical significance metric or incorporating systematic uncertainty penalties – but this is balanced against practical considerations (differentiability, training stability) \cite{Bardhan:2024ibw}.
+A typical supervised-learning workflow in HEP involves several common steps. First, labelled datasets are prepared using Monte Carlo (MC) simulations, which provide ground-truth information for particle types, kinematics, event categories, etc. Supervised training on MC truth is widespread because real collisions cannot be labelled event-by-event with the desired signal/background distinctions \cite{PhysRevD.112.016004}. However, ML models can overfit to simulation-specific artifacts, potentially limiting their ability to generalize to real data \cite{PhysRevD.112.016004}. To mitigate this, physicists carefully design training procedures and validation tests. The dataset is typically split into training and testing portions; models are trained with a suitable loss function (for example, cross-entropy for classification or mean squared error for regression) which reflects the physics goals. Sometimes custom objectives are used – for instance, optimizing directly for a statistical significance metric or incorporating systematic uncertainty penalties – but this is balanced against practical considerations  \cite{Bardhan:2024ibw}.
 
 \section{Adversarial Machine Learning}
 
-Adversarial machine learning studies how deliberately crafted inputs — or unintentional mismodelling — can cause an ML model to make incorrect or biased predictions \cite{doi:10.1142/12294}. In computer vision, the addition of nearly imperceptible perturbations to an image can fool a deep classifier into misidentifying objects \cite{Stein2022}. Resistance to small perturbations is also important in HEP context: Recent studies have raised awareness that supervised HEP models may latch onto simulator-specific quirks — for example, subtle differences in detector response modelling — such that they fail to generalize to real data \cite{PhysRevD.112.016004}. These quirks make HEP models susceptible to data-simulation discrepancies: a slight miscalibration in the simulation or a tiny adjustment in the input features might cause disproportionate shifts in the model output. Ensuring robustness against these effects is therefore important, especially as ML algorithms are integrated into critical physics results.  
+Adversarial machine learning studies how deliberately crafted inputs — or unintentional mismodelling — can cause an ML model to make incorrect or biased predictions \cite{doi:10.1142/12294}. In computer vision, the addition of nearly imperceptible perturbations to an image can fool a deep classifier into misidentifying objects \cite{goodfellow2015explainingharnessingadversarialexamples}. Resistance to small perturbations is also important in HEP context: Recent studies have raised awareness that supervised HEP models may latch onto simulator-specific quirks — for example, subtle differences in detector response modelling — such that they fail to generalize to real data \cite{PhysRevD.112.016004}. These quirks make HEP models susceptible to data-simulation discrepancies: a slight miscalibration in the simulation or a tiny adjustment in the input features might cause disproportionate shifts in the model output. Ensuring robustness against these effects is therefore important, especially as ML algorithms are integrated into critical physics results.  
 
 \subsection{Adversarial Attacks}
 
 Most textbook adversarial attacks assume continuous, differentiable input spaces (such as pixel intensities in an image) and rely on gradient information to find an effective perturbation. For instance, the Fast Gradient Sign Method (FGSM) and the Projected Gradient Descent (PGD) (see Chapter 4 for detailed descriptions) are two well-known techniques that use the gradient of the model’s loss with respect to the input features to adversarially tweak the input \cite{goodfellow2015explainingharnessingadversarialexamples}. These methods nudge the input in the direction that most increases the model’s error, subject to a constraint on the perturbation size (often measured by an $L_p$ norm). FGSM accomplishes this in one step using the sign of the gradients, while PGD applies multiple small steps iteratively and projects the result to ensure the perturbation is staying within a norm bound \cite{madry2019deeplearningmodelsresistant}. Other attack methods include DeepFool, which finds the smallest perturbation to cross the decision-boundary, and various black-box attacks that do not require gradient access. These techniques have been successfully applied in computer vision, where inputs are continuous pixel arrays and small changes can be carefully crafted to cause misclassifications.
 
-Applying adversarial attacks in HEP is challenging due to the constrained realm of physical features. Despite those complications, researchers have begun to explore HEP-specific adversarial attacks. Initial studies have shown that HEP classifiers are susceptible to small input distortions on continuous input features; one group systematically applied FGSM perturbations to a jet-tagging network's input and found that the classifier's performance degraded significantly \cite{Stein2022}. This is not surprising, given that many networks used in HEP rely on piecewise linear activation functions and high-dimensional feature spaces. Consequently, perturbation of a single high-level feature — analogous to the "one-pixel-attack" in images — could potentially flip a classification if the network is right at a decision boundary \cite{Stein2022}.
+However, applying adversarial attacks in HEP is challenging due to the constrained realm of physical features. Despite those complications, researchers have begun to explore HEP-specific adversarial attacks. Initial studies have shown that HEP classifiers are susceptible to small input distortions on continuous input features; one group systematically applied FGSM perturbations to a jet-tagging network's input and found that the classifier's performance degraded significantly \cite{Stein2022}. This is not surprising, given that many networks used in HEP rely on piecewise linear activation functions and high-dimensional feature spaces. Consequently, perturbation of a single high-level feature — analogous to the "one-pixel-attack" in images — could potentially flip a classification if the network is right at a decision boundary \cite{Stein2022}.
 
 \subsection{Adversarial training}
 
@@ -55,4 +55,4 @@ candidates, secondary vertices, and global variables are used as inputs to the t
     \label{fig:deepjetArchitecture}
 \end{figure}
 
-The DeepJet Tagger takes 15 global input variables, 16 charged ParticleFlow (CPF) input variables for 25 candidates, 6 neutral ParticleFlow (NPF) input variables for 25 candidates and 12 secondary vertex (SV) input variables for 4 candidates, constituting 613 inputs per jet (see figure \ref{fig:deepjetArchitecture}). In the first stage, separate input streams are established for each type of low-level object: one for charged particles (tracks), one for neutral particles, and one for secondary vertices. Each stream passes through a stack of $1\times1$ convolutional layers with \textit{kernel size = 1} with bias parameters. These layers compute per-particle features without mixing information across particles, so each particle receives the same operation regardless of order \cite{Bols_2020}. Essentially, this track learns a representation for each track, each neutral, and each vertex input. Next, the outputs of these convolutional streams are fed into recurrent layers (LSTMs \cite{Goodfellow-et-al-2016}). The charged candidate LSTM uses 150 nodes, the neutral LSTM and secondary vertex LSTM each use 50 nodes. The LSTM outputs then are fed into a dense layer of 200 nodes followed by seven layers of 100 nodes each, using ReLU activation throughout. The final output layer is based on a softmax activation function and consists of six nodes, which are the model outputs for the six jet categories.
+The DeepJet Tagger takes 15 global input variables, 16 charged ParticleFlow (CPF) input variables for 25 candidates, 6 neutral ParticleFlow (NPF) input variables for 25 candidates and 12 secondary vertex (SV) input variables for 4 candidates, constituting 613 inputs per jet (see figure \ref{fig:deepjetArchitecture}). In the first stage, separate input streams are established for each type of low-level object: one for charged particles (tracks), one for neutral particles, and one for secondary vertices. Each stream passes through a stack of $1\times1$ convolutional layers with bias parameters. These layers compute per-particle features without mixing information across particles, so each particle receives the same operation regardless of order \cite{Bols_2020}. Essentially, this track learns a representation for each track, each neutral, and each vertex input. Next, the outputs of these convolutional streams are fed into recurrent layers (LSTM). The charged candidate LSTM uses 150 nodes, the neutral LSTM and secondary vertex LSTM each use 50 nodes. The LSTM outputs then are fed into a dense layer of 200 nodes followed by seven layers of 100 nodes each, using ReLU activation throughout. The final output layer is based on a softmax activation function and consists of six nodes, which are the model outputs for the six jet categories.
